src/objects/Tool_Tip__c.object
<CustomObject>
    <description>Object to store business enabled contextual tips based on elements on the screen (e.g, guidance on a claim denial by its denial remark code).</description>
    <fields>
        <fullName>SOP_or_Document_Link__c</fullName>
        <description>Holds the URL of the SOP or document</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the URL of the SOP/Document</inlineHelpText>
        <label>SOP or Document Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SOP_or_Document_Name__c</fullName>
        <description>Holds the name of a linked SOP or document</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of the SOP/Document</inlineHelpText>
        <label>SOP or Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tip__c</fullName>
        <description>Holds the tip for the remark code or status</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the tool tip here</inlineHelpText>
        <label>Tip</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tool_Tip_Type__c</fullName>
        <description>Used to determine what the tool tip relates to</description>
        <label>Tool Tip Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Delegated</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Used to hold the code the tool tip applies to</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the remark code or status tool tip applies to here.  Use &apos;*&apos; for the wildcard tool tip.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Tool Tip</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tool_Tip_Type__c</columns>
        <columns>Value__c</columns>
        <columns>Tip__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Spire_Tool_Tips</fullName>
        <columns>NAME</columns>
        <columns>Tool_Tip_Type__c</columns>
        <columns>Value__c</columns>
        <columns>Tip__c</columns>
        <columns>SOP_or_Document_Name__c</columns>
        <columns>SOP_or_Document_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tool_Tip__c.Spire</value>
        </filters>
        <label>Spire Tool Tips</label>
        <sharedTo>
            <roleAndSubordinates>Provider_Service</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Tool Tip - {000000}</displayFormat>
        <label>Tool Tip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Tips</pluralLabel>
    <recordTypes>
        <fullName>Spire</fullName>
        <active>true</active>
        <description>for Spire tool tips</description>
        <label>Spire</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>If_SOP_Link_Then_Name_Required</fullName>
        <active>true</active>
        <description>If the SOP or Document Link has a value but the SOP or Document Name field is blank then the user can&apos;t create the record.</description>
        <errorConditionFormula>AND( 
    NOT(ISBLANK(SOP_or_Document_Link__c)),
     ISBLANK(SOP_or_Document_Name__c))</errorConditionFormula>
        <errorDisplayField>SOP_or_Document_Name__c</errorDisplayField>
        <errorMessage>Complete this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_SOP_Name_Then_Link_Required</fullName>
        <active>true</active>
        <description>If the SOP or Document Name has a value but the SOP or Document Link field is blank then the user can&apos;t create the record.</description>
        <errorConditionFormula>AND( 
    NOT(ISBLANK(SOP_or_Document_Name__c)),
     ISBLANK(SOP_or_Document_Link__c))</errorConditionFormula>
        <errorDisplayField>SOP_or_Document_Link__c</errorDisplayField>
        <errorMessage>Complete this field.</errorMessage>
    </validationRules>
</CustomObject>